' Generated by UML Generator
' Encoded: dLPRRzem57xdLrZi9T109_MjqjOYBeEgG0IPnjJIoYHUOYqaKMmskgx_VNR8nHTAmbu8ji_t-Ji-FkVubb2OqDqsQ92VE8nX0hV02I0XFKeJlDbHD76YS8d_8F2nuMCN0GSdJe0QZTGA372271ebBmD48Gu8U6q0SA7E6Z6a_ZLOCihGCq48joWVjRWzTDqH3f3nW_raa6imAWUjQ_0hmcxZhTWsSlR2UhfhvtUKk0o7Gyf7CVHGEIBCWsBGIJNA58f4hcGco3H1oMw2aji41NFgYOVeDsvejFBT-9J5xUKfVgJv37CBRWXDe4CFXmzKtpw8HtRmhbHRk5JVdLmhd-Cg2Y8-ETe5WRv0CcifU5bSSY-fBs2AO0coHZ2z5eTulRAxHx7p1eOhUpYp9_FPSxzdsLyNmsUhPzl3nIpd0fz0y-dX2NJNRUFniSl-hTkjcwP4ChMkJi6DRlkoTMCmw2N3WW257lNPwGE2s0NdaMNCxaNBpBvWyq8HaRUuixwSiSM1PrzDExQdz-T8no6g9TTUsMVGPlUxcjQoxDKPl2HWLQCMyM3UN_s_u2mdQsmpMGpxzdpnlVvUpIB52fOjnA414u_ag8Ura0s56Kyd8IlPIJW9ZYcEGY6710iLFDnJ519cdjN6O_0oHqNa55B7HucH80_joqf0etH1W6U6PRwEwJRGYcjswzujfmgeifoMV4TAw3rV5EeboQTAb5nwn6fwi4zdIcArWTp5dju_iCirPrxv27i-FU6nJ57TFmfs4mZSnne8jvIxnJW5dEmW1x-cyPKUkhJMBP5pmXaPLnqzYV9O17E36fgjcEhDF2yRxofMK9MI1S8ZUfVfQWsnzfvMF3nqgJBch9T6dTU5ebDxadKwVpzBDKPzFMa6HpfsjokRg4L2ur0oJ5jNRggshjuApK29XBP-YqANFMp_0G
' URL: http://www.plantuml.com/plantuml/uml/dLPRRzem57xdLrZi9T109_MjqjOYBeEgG0IPnjJIoYHUOYqaKMmskgx_VNR8nHTAmbu8ji_t-Ji-FkVubb2OqDqsQ92VE8nX0hV02I0XFKeJlDbHD76YS8d_8F2nuMCN0GSdJe0QZTGA372271ebBmD48Gu8U6q0SA7E6Z6a_ZLOCihGCq48joWVjRWzTDqH3f3nW_raa6imAWUjQ_0hmcxZhTWsSlR2UhfhvtUKk0o7Gyf7CVHGEIBCWsBGIJNA58f4hcGco3H1oMw2aji41NFgYOVeDsvejFBT-9J5xUKfVgJv37CBRWXDe4CFXmzKtpw8HtRmhbHRk5JVdLmhd-Cg2Y8-ETe5WRv0CcifU5bSSY-fBs2AO0coHZ2z5eTulRAxHx7p1eOhUpYp9_FPSxzdsLyNmsUhPzl3nIpd0fz0y-dX2NJNRUFniSl-hTkjcwP4ChMkJi6DRlkoTMCmw2N3WW257lNPwGE2s0NdaMNCxaNBpBvWyq8HaRUuixwSiSM1PrzDExQdz-T8no6g9TTUsMVGPlUxcjQoxDKPl2HWLQCMyM3UN_s_u2mdQsmpMGpxzdpnlVvUpIB52fOjnA414u_ag8Ura0s56Kyd8IlPIJW9ZYcEGY6710iLFDnJ519cdjN6O_0oHqNa55B7HucH80_joqf0etH1W6U6PRwEwJRGYcjswzujfmgeifoMV4TAw3rV5EeboQTAb5nwn6fwi4zdIcArWTp5dju_iCirPrxv27i-FU6nJ57TFmfs4mZSnne8jvIxnJW5dEmW1x-cyPKUkhJMBP5pmXaPLnqzYV9O17E36fgjcEhDF2yRxofMK9MI1S8ZUfVfQWsnzfvMF3nqgJBch9T6dTU5ebDxadKwVpzBDKPzFMa6HpfsjokRg4L2ur0oJ5jNRggshjuApK29XBP-YqANFMp_0G
' Generated on: 2026-06-02T23:47:43.012544100

@startuml
skinparam classAttributeIconSize 0
hide circle

class DirectoryDetails {
  +DirectoryDetails(path: String, name: String)
  +addFile(fileDetails: FileDetails): void
}

class DocxFileDetails {
  -words: int
  -pages: int
  -size: int
  --
  +DocxFileDetails(path: String, fileName: String, words: int, pages: int, size: int)
  +getWords(): int
  +getPages(): int
  +getSize(): int
}

abstract class FileDetails {
  #name: String
  -path: String
  --
  +FileDetails(path: String, fileName: String)
  +getName(): String
  +getFullName(): String
  +setName(name: String): void
  +getPath(): String
}

class FileDetailsFactory {
  -{static} EXTENTION_CAPTURE_PATTERN: String = "^[^ .]*(\\.[^ ]*)?"
  -{static} MP3_CAPTURE_PATTERN: String = "(.*/)?([^ /]*) length in seconds: (\\d+), (\\d+) bytes"
  -{static} JPG_CAPTURE_PATTERN: String = "(.*/)?([^ /]*) (\\d+)x(\\d+), (\\d+) bytes"
  -{static} HTML_CAPTURE_PATTERN: String = "(.*/)?([^ /]*) lines: (\\d+), (\\d+) bytes"
  -{static} TXT_CAPTURE_PATTERN: String = "(.*/)?([^ /]*) words: (\\d+), (\\d+) bytes"
  -{static} PPTX_CAPTURE_PATTERN: String = "(.*/)?([^ /]*) slides: (\\d+), (\\d+) bytes"
  -{static} DOCX_CAPTURE_PATTERN: String = "(.*/)?([^ /]*) words: (\\d+), pages: (\\d+), (\\d+) bytes"
  -{static} DIRECTORY_CAPTURE_PATTERN: String = "(.*/)?([^ /]*)"
  --
  +{static} main(args: String[]): void
  +{static} getFileDetails(description: String): FileDetails
  +{static} getExtension(fileDescription: String): String
  +{static} getMatcher(regex: String, toMatch: String): Matcher
}

class HtmlFileDetails {
  -lines: int
  -size: int
  --
  +HtmlFileDetails(path: String, fileName: String, lines: int, size: int)
  +getLines(): int
  +setLines(lines: int): void
  +getSize(): int
  +setSize(size: int): void
}

class JpgFileDetails {
  -width: int
  -height: int
  -size: int
  --
  +JpgFileDetails(path: String, fileName: String, width: int, height: int, size: int)
  +getWidth(): int
  +getHeight(): int
  +getSize(): int
}

class Mp3FileDetails {
  -lengthSec: int
  -size: int
  --
  +Mp3FileDetails(path: String, fileName: String, lengthSec: int, size: int)
  +getLengthSec(): int
  +getSize(): int
}

class PptxFileDetails {
  -slides: int
  -size: int
  --
  +PptxFileDetails(path: String, fileName: String, slides: int, size: int)
  +getSlides(): int
  +getSize(): int
}

class TxtFileDetails {
  -words: int
  -size: int
  --
  +TxtFileDetails(path: String, fileName: String, words: int, size: int)
  +getWords(): int
  +getSize(): int
}

DirectoryDetails --|> FileDetails
DocxFileDetails --|> FileDetails
FileDetailsFactory ..> FileDetails
HtmlFileDetails --|> FileDetails
JpgFileDetails --|> FileDetails
Mp3FileDetails --|> FileDetails
PptxFileDetails --|> FileDetails
TxtFileDetails --|> FileDetails
@enduml